[package]
name = "tree-sitter-todome"
description = "todome grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "todome"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-todome"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[[bin]]
name = "tree-sitter-todome"
path = "bindings/rust/main.rs"

[dependencies]
anyhow = "1.0.43"
chrono = "0.4.19"
itertools = "0.10.3"
structopt = "0.3.22"
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
